[package]
name = "spacetraders-tui"
version = "0.1.0"
authors = ["robotabc773 <sebastianxwu@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
crossterm = "0.26.1"
reqwest = "0.11.17"
reqwest-middleware = "0.2.2"
task-local-extensions = "0.1.4"
tokio = { version = "1.28.1", features = ["full"] }
tui = { package = "ratatui", version = "0.20.1" }
