[package]
name = "spacetraders-tui"
version = "0.1.0"
authors = ["robotabc773 <sebastianxwu@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
chrono = "0.4.24"
crossterm = "0.26.1"
log = "0.4.17"
once_cell = "1.17.1"
reqwest = "0.11.17"
reqwest-middleware = "0.2.2"
spacedust = "1.0.5"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres"] }
task-local-extensions = "0.1.4"
tokio = { version = "1.28.1", features = ["full"] }
tui = { package = "ratatui", version = "0.20.1" }
